gccida/c3/fixup_abnormal_edges
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_abnormal_edges/src/reload1.c:10026:15: error: use of undeclared identifier 'off_723588'
fancy_abort( &off_723588[4], 9527, "fixup_abnormal_edges"); 
              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_abnormal_edges/src/obj/reload1.o] Error 1
